ndb - bug#48232 - improve error reporting when failure to recreate/drop object during restore of schema