storage/ndb/include/mgmapi/ndbd_exit_codes.h
@@ -153,6 +153,7 @@ typedef ndbd_exit_classification_enum ndbd_exit_classification;
 
 #define NDBD_EXIT_INVALID_LCP_FILE          2352
 #define NDBD_EXIT_INSUFFICENT_NODES         2353
+#define NDBD_EXIT_RESTORE_SCHEMA            2355
 
 const char *
 ndbd_exit_message(int faultId, ndbd_exit_classification *cl);
