storage/ndb/src/kernel/error/ndbd_exit_codes.c
@@ -172,6 +172,8 @@ static const ErrStruct errArray[] =
    
    {NDBD_EXIT_UNSUPPORTED_VERSION, XRE, "Unsupported version" },
    
+   {NDBD_EXIT_RESTORE_SCHEMA, XCR, "Failure to restore schema" },
+   
    /* Sentinel */
    {0, XUE,
     "No message slogan found (please report a bug if you get this error code)"}
